favicon added fixed contrast issues, polished

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -64,7 +64,6 @@
     }
     .selectedMember:hover {
         background-color: #9EB7E5;
-        color: white;
         transform: scale(1.10);
     }
     #forecast {
